apps/configs/proxmox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: proxmox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: proxmox-pve
          namespace: proxmox
          port: 8006
          serversTransport: proxmox-transport
          scheme: https
  tls:
    secretName: proxmox-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: proxmox-ssh
  namespace: proxmox
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: proxmox-ssh
          port: 22
